# xagent2

./: README.md  main.py  pyproject.toml  workspace.toml
bases/: README.md
bases/xagent2/assistant_api/: __init__.py  adapters.py  core.py  wiring.py
bases/xagent2/my_example_endpoint/: __init__.py
components/: README.md
components/xagent2/identity/: __init__.py  core.py
components/xagent2/identity_api/: __init__.py  core.py
components/xagent2/my_component/: __init__.py
components/xagent2/query_service/: __init__.py  core.py
components/xagent2/service_config/: __init__.py  core.py
deploy/: README.md
deploy/helm/assistant_api/: Chart.yaml  values.yaml
deploy/helm/assistant_api/templates/: deployment.yaml
development/: README.md
projects/: README.md
projects/assistant1/: pyproject.toml
projects/assistant1/deploy/: README.md  values-it.yaml  values-prod.yaml  values-qa.yaml
projects/my_example_project/: pyproject.toml
test/bases/xagent2/assistant_api/: test_core.py
test/bases/xagent2/my_example_endpoint/: test_core.py
test/components/xagent2/identity/: test_core.py
test/components/xagent2/messaging/: test_core.py
test/components/xagent2/my_component/: test_core.py
test/components/xagent2/query_service/: test_core.py
