[project]
name = "xagent2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["workspace.toml", "README.md"]

[dependency-groups]
dev = [
    "polylith-cli>=1.41.1",
]
