[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "my_example_project"
version = "0.1.0"



requires-python = ">=3.14"

dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["xagent2"]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/xagent2/my_example_endpoint" = "xagent2/my_example_endpoint"
